# claude-cowork-desktop

./: .gitignore  CONTEXT.md  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
apps/desktop/src/: App.tsx
apps/desktop/src/components/: RunLogPanel.tsx  SessionPanel.tsx  SettingsPanel.tsx  TaskBoard.tsx  ToolPanel.tsx  WorkspacePanel.tsx
apps/desktop/src/logs/: runlog.ts
apps/desktop/src/services/: llm.ts  tauri.ts  tools.ts
apps/desktop/src/sessions/: config.ts  storage.ts  store.ts  types.ts
apps/desktop/src/settings/: storage.ts  store.ts  types.ts
apps/desktop/src/stores/: toolStore.ts
apps/desktop/src/tasks/: storage.ts  store.ts  types.ts
apps/desktop/src/workspace/: storage.ts  store.ts  types.ts
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs
docs/: api-contract.md  architecture.md  change-policy.md  llm-integration-plan.md  mvp-sprint-backlog.md  prd-v0.1.md  progress-log.md  tooling-plan.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/llm/: company_gateway.rs  mod.rs  ollama.rs  openai_compatible.rs  provider.rs  types.rs
src-tauri/src/tools/: fs.rs  mod.rs  state.rs  types.rs
